# BlockListProject

./: .gitignore  CMakeLists.txt  FileBlockList.cpp  FileBlockList.slnx  FileBlockList.vcxproj  FileBlockList.vcxproj.filters  Hasher.cpp  Logger.cpp  Logger.h  README.md  Scanner.cpp  Scanner.h  blocklist.txt  log.txt
core/: Blocklist.cpp  Monitor.cpp  Scanner.cpp
files/: data.csv  page_1.html  student.xlsx
include/: Blocklist.h  Hasher.h  Monitor.h
